# movie-finder

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml  index.html
initdb/: schema.sql
protected/: dashboard.html  favorite.html  index.html  unauthorized.html
src/: index.html  main.rs  script.js  styles.css
static/: favorite.css  index.html  login.css  login.html  script.js  signup.css  signup.html  styles.css
